Fix issue #2742 by changing the gap img style
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoQtiItem/trunk@20918 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/css/qti.css
+++ b/views/css/qti.css
@@ -265,14 +265,11 @@ textarea { resize: vertical; }
 .qti-choiceInteraction .checked span.icon-checkbox:before { content: "\1b4"; }
 
 .qti-graphicGapMatchInteraction ul.source { margin: 10px auto; padding: 0 !important; clear: both; }
-.qti-graphicGapMatchInteraction ul.source > li { min-width: 60px; line-height: 60px; min-height: 60px; text-align: center; font-size: 20px; font-size: 2rem; margin: 0; padding: 0; background: white; margin-right: 3px; cursor: pointer; }
-.qti-graphicGapMatchInteraction ul.source > li.active { border: solid 1px #3e7da7; -webkit-transition: background 0.4s ease-out; -moz-transition: background 0.4s ease-out; -o-transition: background 0.4s ease-out; transition: background 0.4s ease-out; }
+.qti-graphicGapMatchInteraction ul.source > li { min-width: 60px; line-height: 60px; min-height: 60px; text-align: center; font-size: 20px; font-size: 2rem; margin: 0; padding: 0; background: white; border: solid 1px #ddd !important; margin-right: 3px; cursor: pointer; }
+.qti-graphicGapMatchInteraction ul.source > li.active { border: solid 1px #3e7da7 !important; -webkit-transition: background 0.4s ease-out; -moz-transition: background 0.4s ease-out; -o-transition: background 0.4s ease-out; transition: background 0.4s ease-out; }
 .qti-graphicGapMatchInteraction ul.source > li.active:hover { background: white !important; cursor: default !important; }
 .qti-graphicGapMatchInteraction ul.source > li.active.selectable:hover { cursor: pointer !important; }
 .qti-graphicGapMatchInteraction ul.source > li.disabled { border: none; cursor: default !important; color: #333 !important; background-color: transparent !important; }
-.qti-graphicGapMatchInteraction ul.source > li.empty { margin: 0 !important; width: 60px; height: 60px; }
-.qti-graphicGapMatchInteraction ul.source > li .dummy-element { cursor: pointer; }
-.qti-graphicGapMatchInteraction ul.source > li .mini-tlb { font-size: 14px; font-size: 1.4rem; }
 .qti-graphicGapMatchInteraction .gap-filler { display: block; position: absolute; z-index: 20000; }
 
 /* to be included into your scss files, don't forget to set the includePaths (--load-path) in your compiler  */
