--- a/views/scss/qti/_graphic-gap.scss
+++ b/views/scss/qti/_graphic-gap.scss
@@ -15,13 +15,14 @@
             margin: 0;
             padding: 0;
             background: white();
+            border: solid 1px #ddd !important;
             margin-right: 3px;
             cursor: pointer;
             &:hover{
                 @extend %selectableHover;
             }
             &.active {
-                border: solid 1px $uiClickableHoverBg;
+                border: solid 1px $uiClickableHoverBg !important;
                 @include transition(background, 0.4s);
                 &:hover{
                     background: white() !important;
@@ -33,23 +34,14 @@
                     cursor: pointer !important;
                 }
             }
+            
             &.disabled {
                 border: none;
                 cursor: default !important;
                 color: #333 !important;
                 background-color: transparent !important;
             }
-            &.empty {
-                margin: 0 !important;
-                width: 60px;
-                height: 60px;
-            }
-            .dummy-element {
-                cursor : pointer;
-            }       
-            .mini-tlb {
-                @include font-size(14);
-            } 
+
         }
     }
 
