--- a/views/scss/qtiCreator/_graphic-gap.scss
+++ b/views/scss/qtiCreator/_graphic-gap.scss
@@ -1,2 +1,37 @@
 @import "inc/bootstrap";
-@import 'qtiCreator/response-pairs';
+
+.qti-graphicGapMatchInteraction {
+
+    ul.source > li {
+
+        &.empty, &.placeholder {
+            margin: 0 5px 0 0 !important;
+            width: 60px;
+            height: 60px;
+            max-height: 60px;
+        }
+
+        span.mini-tlb[data-edit] {
+            @include font-size(14);
+            position: absolute;
+            right: 0 !important;
+            top: 0 !important; 
+            height: 24px !important;
+            width: 24px;
+            margin: 0;
+            padding: 0; 
+       } 
+
+        .dummy-element {
+            cursor : pointer;
+                
+            & ~ span.mini-tlb[data-edit] {
+                @include font-size(14);
+                position: absolute;
+                right: 0 !important;
+                top: 0 !important; 
+                height: 24px !important;
+           } 
+        }
+    }
+}
